opensovd-core/crates/fault-sink-mqtt/tests/snapshots/schema_snapshot__warning_severity_snapshot.snap
---
source: crates/fault-sink-mqtt/tests/schema_snapshot.rs
assertion_line: 70
expression: pretty
---
{
  "component_id": "bcm",
  "dtc": "PFFFF",
  "severity": 3,
  "status": "pending",
  "timestamp": "2026-04-17T19:00:00Z",
  "bench_id": "bench-test"
}
